# LearningCMake

./: CMakeLists.txt  LearningCMakeConfig.h.in  main.cpp
mylibrary/: CMakeLists.txt  myFunctions.cpp
